--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Aileron:wght@300;400;500;600;700&display=swap');
+@import './styles/globals.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
